--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,3 +7,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+#Home > .listContainer {
+  background-color: whitesmoke;
+  width: 80%;
+  text-align: initial;
+  padding: 1%;
+}
