--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1,17 +1,14 @@
 .background {
   width: 100%;
   height: 100%;
-  text-align: center;
-  background-color: #282c34;
+  background-color:#dbdee0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
 
-.background > .container {
-  height: 100%;
-  width: 100%;
-  margin: 10%;
-  background-color: whitesmoke;
+ .header {
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
