--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,11 +1,13 @@
 #Home > .logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
 #Home > .header {
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-top: 10px;
+  font-size:200%;
 }
 
 #Home > .listContainer {
