--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -5,10 +5,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
- .header {
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+  width: 80%;
 }
