--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1,11 +1,11 @@
 .background {
   width: 100%;
   height: 100%;
-  background-color:#dbdee0;
+  background-color:#f2f5ff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .container {
